--- a/single image SIA (user friendly).ipynb
+++ b/single image SIA (user friendly).ipynb
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {
     "scrolled": false
    },
@@ -197,8 +197,7 @@
    ],
    "source": [
     "exp = \"single tiffs (demo)\"\n",
-    "### \"data_dir\" is the pathway to the folder holding the tiff files to be analyzed \n",
-    "#C:\\Users\\gleech\\Documents\\GitHub\\kai codes\\user-friendly-SIA\\user-friendy-SIA\\single tiffs (demo)\n",
+    "### \"data_dir\" is the pathway to the folder holding the tiff files to be analyzed --> change to your folder location\n",
     "data_dir = \"C:\\\\Users\\\\gleech\\\\Documents\\\\GitHub\\\\kai codes\\\\user-friendly-SIA\\\\\"+exp +\"\\\\\" \n",
     "### \"plot_saveto\" is the pathway to the folder where plots and results will be saved\n",
     "plot_saveto = data_dir\n",
@@ -301,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {
     "scrolled": false
    },
@@ -2339,7 +2338,7 @@
     "file_details = str((files[file_index].split('\\\\')[-1])[:-4]) + \", frame \" + str(frame_key +1)\n",
     "print(\"running SIA on \" + file_details + \" ...\")\n",
     "\n",
-    "skeletonize = True     #change if desired\n",
+    "skeletonize = False     #change if desired\n",
     "block_size = block_size #change if desired\n",
     "offset_val = offset_val #change if desired\n",
     "\n",
