--- a/simplified image histograms (2-10-23).ipynb
+++ b/simplified image histograms (2-10-23).ipynb
@@ -2,10 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "f7f0d53e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\gleech\\Documents\\GitHub\\kai codes\\user-friendly-SIA\\tiff_file.py:1995: UserWarning: failed to import _tifffile.decodepackbits\n",
+      "  warnings.warn(\"failed to import %s\" % module_function)\n",
+      "C:\\Users\\gleech\\Documents\\GitHub\\kai codes\\user-friendly-SIA\\tiff_file.py:1995: UserWarning: failed to import _tifffile.decodelzw\n",
+      "  warnings.warn(\"failed to import %s\" % module_function)\n",
+      "C:\\Users\\gleech\\Documents\\GitHub\\kai codes\\user-friendly-SIA\\tiff_file.py:1995: UserWarning: failed to import _tifffile.unpackints\n",
+      "  warnings.warn(\"failed to import %s\" % module_function)\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib notebook\n",
     "import numpy as np\n",
@@ -49,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "f41c7dfa",
    "metadata": {},
    "outputs": [],
@@ -69,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "617edfe1",
    "metadata": {},
    "outputs": [
@@ -4037,7 +4050,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -4051,7 +4064,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
